[gd_scene load_steps=11 format=3 uid="uid://cunt05my5g2o2"]

[ext_resource type="Script" path="res://entities/enemies/chuchu.gd" id="1_0jf7h"]
[ext_resource type="Texture2D" uid="uid://dgrl63iy3vtxc" path="res://assets/chuchu.png" id="2_t8r8w"]
[ext_resource type="Script" path="res://helper/state_helper.gd" id="3_ohj2h"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_07t00"]
radius = 0.60324
height = 1.20648

[sub_resource type="Animation" id="Animation_h6g8l"]
resource_name = "Coming"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(5, 55, 5, 3), Rect2(15, 54, 8, 5), Rect2(28, 54, 11, 5), Rect2(42, 54, 14, 7), Rect2(60, 54, 15, 8), Rect2(79, 53, 15, 8), Rect2(99, 53, 15, 8), Rect2(140, 37, 10, 24), Rect2(156, 46, 14, 17), Rect2(176, 44, 12, 19)]
}

[sub_resource type="Animation" id="Animation_exj4o"]
resource_name = "Jump"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(6, 86, 14, 24), Rect2(25, 86, 16, 24), Rect2(46, 86, 10, 24), Rect2(62, 86, 12, 24), Rect2(79, 86, 16, 24), Rect2(100, 86, 14, 24), Rect2(119, 86, 12, 24)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"handle_jump"
}]
}

[sub_resource type="Animation" id="Animation_ry6o8"]
resource_name = "Normal"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(202, 44, 12, 19), Rect2(221, 44, 12, 19), Rect2(237, 45, 14, 19), Rect2(254, 45, 16, 20), Rect2(270, 45, 16, 20), Rect2(289, 46, 15, 19), Rect2(306, 46, 14, 19), Rect2(324, 46, 12, 19), Rect2(340, 46, 12, 19), Rect2(356, 46, 12, 19), Rect2(372, 45, 14, 19), Rect2(388, 45, 15, 19), Rect2(406, 45, 16, 19), Rect2(424, 44, 15, 19), Rect2(442, 45, 14, 19), Rect2(460, 45, 12, 19)]
}

[sub_resource type="Animation" id="Animation_qqmwf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(202, 44, 12, 19)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_88gvm"]
_data = {
"Coming": SubResource("Animation_h6g8l"),
"Jump": SubResource("Animation_exj4o"),
"Normal": SubResource("Animation_ry6o8"),
"RESET": SubResource("Animation_qqmwf")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_erccc"]
radius = 0.906506

[node name="Chuchu" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_0jf7h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_07t00")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
billboard = 2
texture = ExtResource("2_t8r8w")
region_enabled = true
region_rect = Rect2(202, 44, 12, 19)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite3D")
libraries = {
"": SubResource("AnimationLibrary_88gvm")
}

[node name="StateHelper" type="Node" parent="."]
script = ExtResource("3_ohj2h")

[node name="StartJumpTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Area3D" type="Area3D" parent="." groups=["enemyarea"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_erccc")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="StartJumpTimer" to="." method="_on_start_jump_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
